--- a/kanban-board/src/assets/main.css
+++ b/kanban-board/src/assets/main.css
@@ -606,6 +606,18 @@ video {
   }
 }
 
+html,
+body,
+#root {
+  height: 100%;
+  width: 100%;
+  font-family: "Poppins", sans-serif;
+}
+
+* {
+  outline: none;
+}
+
 .space-y-0 > :not(template) ~ :not(template) {
   --space-y-reverse: 0;
   margin-top: calc(0px * calc(1 - var(--space-y-reverse)));
